feat: :construction: Sign Up component

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -289,6 +289,7 @@
 .container.active .overlay .page.page_signIn {
     opacity: 0;
     margin-left: -100%;
+    padding: 0 4px;
 }
 
 .container.active .overlay .page.page_signUp {
