--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,12 +16,51 @@
                 <button class="btn bkg">Sign In</button>
             </form>
         </div>
-        <div class="form sign_up">
+        <div class="form sign_up py-2 max-h-screen">
             <h3>Sign Up</h3>
             <span>or use your email for register</span>
-            <form action="#" id="form_input">
+            <form action="#" id="form_input" class="overflow-y-auto px-1">
                 <div class="type">
-                    <input type="text" name="" placeholder="Name" id="name">
+                    <input type="text" name="name" placeholder="Name" id="name">
+                </div>
+                <div class="type">
+                    <input type="text" name="lastName" placeholder="Last Name" id="lastName">
+                </div>
+                <div class="type">
+                    <input type="text" name="idNumber" placeholder="Identification Number" id="idNumber">
+                </div>
+                <div class="type">
+                    <input type="text" name="telephone" placeholder="Telephone" id="telephone">
+                </div>
+                <div class="type flex flex-col justify-end">
+
+                    <div class="flex justify-around">
+                        <select name="country" id="country" class="w-40">
+                            <option value="" selected disabled>Country</option>
+                            <option value="colombia">Colombia</option>
+                        </select>
+                        <select name="region" id="region" class="w-40">
+                            <option value="" selected disabled>Region</option>
+                            <option value="region">Santander</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="type flex flex-col">
+                    <label for="region">Select your region</label>
+                    <select name="region" id="region">
+                        <option value="" selected disabled>Region</option>
+                        <option value="region">Santander</option>
+                    </select>
+                </div>
+                <div class="type flex flex-col">
+                    <label for="city">Select your city</label>
+                    <select name="city" id="city">
+                        <option value="" selected disabled>City</option>
+                        <option value="city">Bucaramanga</option>
+                    </select>
+                </div>
+                <div class="type">
+                    <input type="text" name="postalCode" placeholder="Postal Code" id="postalCode">
                 </div>
                 <div class="type">
                     <input type="email" name="" placeholder="Email" id="email">
@@ -36,12 +75,12 @@
     <div class="overlay">
         <div class="page page_signIn">
             <h3>Welcome Back!</h3>
-            <p>To keep with us please login with your personal info</p>
+            <p class="px-1">To keep with us please login with your personal info</p>
             <button class="btn btnSign-in" (click)="toggleSignIn()">Sign Up <i class="bi bi-arrow-right"></i></button>
         </div>
         <div class="page page_signUp">
             <h3>Hello Friend!</h3>
-            <p>Enter your personal details and start journey with us</p>
+            <p class="px-1">Enter your personal details and start journey with us</p>
             <button class="btn btnSign-up" (click)="toggleSignUp()">
                 <i class="bi bi-arrow-left"></i> Sign In</button>
         </div>
