feat: :construction: Admin and Product Page added (in progress)

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
             <img src="gnglogo.svg" alt="Grab and Go Logo">
             <h3 class="mt-4">Sign In</h3>
             <span>or use your account</span>
-            <form action="#" id="form_input">
+            <form action="#" id="form_input" (submit)="onLogin()">
                 <div class="type">
                     <input type="email" placeholder="Email" name="" id="email">
                 </div>
