feat: :sparkles: Side Bar Toggle Partially Complete

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,11 +3,11 @@
     <p class="text-sm">Administrador</p>
 </div>
 <nav class="mt-4">
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Home</a>
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Productos</a>
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Clientes</a>
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Pedidos</a>
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Pagos</a>
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Empleados</a>
-    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Mas</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Home</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Productos</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Clientes</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Pedidos</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Pagos</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Empleados</a>
+    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"><i>Icon</i>Mas</a>
 </nav>
