--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,15 +1,18 @@
-<div class="flex w-full h-screen">
-    <div #sidebarContainer class="transform translate-x-0 transition-transform duration-300" [class.w-16]="isCollapsed"
+<div class="flex flex-auto w-full h-screen">
+    <app-sidebar #sidebarContainer class="transition-width duration-300 overflow-x-hidden" [class.w-16]="isCollapsed"
         [class.w-64]="!isCollapsed">
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="flex transition-transform duration-300" [class.ml-16]="isCollapsed" [class.ml-64]="!isCollapsed">
-        <button (click)="toggleSidebar()" class="text-gray-500 focus:outline-none">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-        </button>
+    </app-sidebar>
+
+    <div class="flex-grow">
+
+        <nav class="flex items-center justify-end w-full h-16 left-0 top-0 bg-navbar-gradient gap-x-7 px-7">
+            <div>
+                <a href="#" class="text-gray-50 font-bold">Home</a>
+                <a href="#" class="text-gray-50 font-bold">Home</a>
+                <a href="#" class="text-gray-50 font-bold">Home</a>
+                <a href="#" class="text-gray-50 font-bold">About Us</a>
+            </div>
+        </nav>
         <app-product-management></app-product-management>
     </div>
 </div>
