--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -4,14 +4,17 @@
     </app-sidebar>
 
     <div class="flex-grow">
-
+        <button (click)=" toggleSidebar()" class="absolute top-4 text-white focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </button>
         <nav class="flex items-center justify-end w-full h-16 left-0 top-0 bg-navbar-gradient gap-x-7 px-7">
-            <div>
-                <a href="#" class="text-gray-50 font-bold">Home</a>
-                <a href="#" class="text-gray-50 font-bold">Home</a>
-                <a href="#" class="text-gray-50 font-bold">Home</a>
-                <a href="#" class="text-gray-50 font-bold">About Us</a>
-            </div>
+            <a href="#" class="text-gray-50 font-bold">Home</a>
+            <a href="#" class="text-gray-50 font-bold">Home</a>
+            <a href="#" class="text-gray-50 font-bold">Home</a>
+            <a href="#" class="text-gray-50 font-bold">About Us</a>
         </nav>
         <app-product-management></app-product-management>
     </div>
