--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,7 +1,5 @@
 <div class="flex flex-auto w-full h-screen">
-    <app-sidebar #sidebarContainer class="transition-width duration-300 overflow-x-hidden" [class.w-16]="isCollapsed"
-        [class.w-64]="!isCollapsed">
-    </app-sidebar>
+    <app-sidebar></app-sidebar>
 
     <div class="flex-grow">
         <app-nav-bar></app-nav-bar>
