--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container" #container>
     <div class="box">
         <div class="form sign_in">
-            <img src="gnglogo.svg" alt="Grab and Go Logo">
+            <img src="gnglogo.svg" alt="Grab and Go logo">
             <h3 class="mt-4">Sign In</h3>
             <span>or use your account</span>
             <form action="#" id="form_input" (submit)="onLogin()">
@@ -64,12 +64,12 @@
     <div class="overlay">
         <div class="page page_signIn">
             <h3>Welcome Back!</h3>
-            <button class="btn btnSign-in" (click)="toggleSignIn()">Sign Up <i class="bi bi-arrow-right"></i></button>
+            <button class="btn btnSign-in" (click)="toggleSignIn()">Sign Up <i class='bx bx-chevron-right'></i></button>
         </div>
         <div class="page page_signUp">
             <h3>Hello Friend!</h3>
             <button class="btn btnSign-up" (click)="toggleSignUp()">
-                <i class="bi bi-arrow-left"></i> Sign In</button>
+                <i class='bx bx-chevron-left'></i> Sign In</button>
         </div>
     </div>
 </div>
