--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
 <div class="flex-grow">
     <app-nav-bar></app-nav-bar>
-    <app-product-card></app-product-card>
+    <app-about-us></app-about-us>
 </div>
