feat: :lipstick: update about us
update about us

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,8 @@
-<div class="flex-grow">
-    <app-nav-bar></app-nav-bar>
-    <app-about-us></app-about-us>
+<div class="flex flex-auto w-full h-screen">
+    <app-sidebar></app-sidebar>
+
+    <div class="flex-grow">
+        <app-nav-bar></app-nav-bar>
+        <app-about-card></app-about-card>
+    </div>
 </div>
