--- a/src/app/pages/customer-page/customer-page.component.html
+++ b/src/app/pages/customer-page/customer-page.component.html
@@ -1,4 +1,9 @@
-<div class="flex-grow">
-    <app-nav-bar></app-nav-bar>
-    <app-product-card></app-product-card>
+<div class="flex flex-auto w-full h-screen">
+    <app-sidebar></app-sidebar>
+
+    <div class="flex-grow">
+        <app-nav-bar></app-nav-bar>
+        <app-product-card></app-product-card>
+    </div>
+
 </div>
