style: :lipstick: Sidebar replaced for Sidenav to improve ui

--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,6 +1,5 @@
 <div class="flex flex-auto w-full h-screen">
-    <app-sidebar></app-sidebar>
-
+    <app-sidenav></app-sidenav>
     <div class="flex-grow">
         <app-nav-bar></app-nav-bar>
         <app-product-management></app-product-management>
