--- a/src/app/pages/customer-page/customer-page.component.html
+++ b/src/app/pages/customer-page/customer-page.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-auto w-full h-screen">
-    <app-sidebar></app-sidebar>
+    <app-sidenav></app-sidenav>
 
     <div class="flex-grow">
         <app-nav-bar></app-nav-bar>
