feat: :sparkles: Router Configured, Paths added, Sidenav Navigate

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="flex items-center justify-end w-full h-16 left-0 top-0 bg-navbar-gradient gap-x-7 px-7">
     <a href="#" class="text-gray-50 font-bold">Home</a>
     <a href="#" class="text-gray-50 font-bold">Home</a>
-    <a href="#" class="text-gray-50 font-bold">Home</a>
-    <a href="#" class="text-gray-50 font-bold">About Us</a>
+    <a href="#" class="text-gray-50 font-bold">About us</a>
+    <a href="#" class="text-gray-50 font-bold">Log out</a>
 </nav>
