--- a/src/app/pages/admin-page/product-management/product-management.component.html
+++ b/src/app/pages/admin-page/product-management/product-management.component.html
@@ -4,22 +4,22 @@
             <thead>
                 <tr>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Nombre</th>
+                        Name</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Dimensiones</th>
+                        Dimensions</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Gama
+                        Gamma
                     </th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Descripción</th>
+                        Description</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Proveedor</th>
+                        Supplier</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Cantidad en Stock</th>
+                        Stock Quantity</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Precio Venta</th>
+                        Sell Price</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Precio Proveedor</th>
+                        Supplier Price</th>
                 </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
