--- a/src/app/pages/admin-page/product-management/product-management.component.html
+++ b/src/app/pages/admin-page/product-management/product-management.component.html
@@ -1,4 +1,5 @@
 <main class="p-4">
+    <app-management-bar [title]="title"></app-management-bar>
     <div class="bg-white shadow rounded-lg p-4 overflow-x-auto">
         <table class="min-w-full divide-y divide-gray-200">
             <thead>
